--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1961,7 +1961,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "e6ad8bcd",
+   "id": "b39e0efe",
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "4426a2d9",
+   "id": "ecf5aa6a",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "7cf8f24a",
+   "id": "ea88fa99",
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2197,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "c22fcf6e",
+   "id": "6ab74e51",
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "490c5a55",
+   "id": "ca5b7719",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "241df1b5",
+   "id": "e9681634",
    "metadata": {},
    "outputs": [
     {
@@ -2427,7 +2427,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "fddc16b0",
+   "id": "0e1eb08d",
    "metadata": {},
    "outputs": [
     {
@@ -2469,7 +2469,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "04415384",
+   "id": "1b652a80",
    "metadata": {},
    "outputs": [
     {
@@ -2512,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "98a048b0",
+   "id": "ba127021",
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "06538f4c",
+   "id": "5110f538",
    "metadata": {},
    "outputs": [
     {
@@ -2600,7 +2600,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "10252077",
+   "id": "087a5a95",
    "metadata": {},
    "outputs": [
     {
@@ -2640,7 +2640,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f89bb56d",
+   "id": "09f4c2f7",
    "metadata": {},
    "outputs": [
     {
@@ -2685,7 +2685,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "32932e82",
+   "id": "7ce53b22",
    "metadata": {},
    "outputs": [
     {
@@ -2925,7 +2925,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "ffe81282",
+   "id": "94842bcd",
    "metadata": {},
    "outputs": [
     {
@@ -2969,7 +2969,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "e5166dd1",
+   "id": "9f763ea1",
    "metadata": {},
    "outputs": [
     {
@@ -3229,7 +3229,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "a528ea63",
+   "id": "4b0e5bc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3252,7 +3252,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "332d28fd",
+   "id": "fe4ac9c5",
    "metadata": {},
    "outputs": [
     {
@@ -3298,7 +3298,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "99e3fe77",
+   "id": "eb57e383",
    "metadata": {},
    "outputs": [
     {
@@ -3334,7 +3334,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "9dcb2b1c",
+   "id": "2adb09a6",
    "metadata": {},
    "outputs": [
     {
@@ -3477,7 +3477,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "35604f6b",
+   "id": "1bc944a9",
    "metadata": {},
    "outputs": [
     {
@@ -3518,7 +3518,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "cdc2e5c2",
+   "id": "40ccfad5",
    "metadata": {},
    "outputs": [
     {
@@ -3691,7 +3691,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "4968f634",
+   "id": "e201f8f6",
    "metadata": {},
    "outputs": [
     {
@@ -3850,7 +3850,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "da13a82c",
+   "id": "06723ca1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3867,7 +3867,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "77356397",
+   "id": "f10d437e",
    "metadata": {},
    "outputs": [
     {
@@ -4019,7 +4019,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "78d9e131",
+   "id": "78c826d7",
    "metadata": {},
    "outputs": [
     {
@@ -4168,7 +4168,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "e03233c8",
+   "id": "bd127d8e",
    "metadata": {},
    "outputs": [
     {
@@ -4425,7 +4425,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "1f0e1667",
+   "id": "959c0c08",
    "metadata": {},
    "outputs": [
     {
@@ -4475,7 +4475,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "94f29acb",
+   "id": "a1e4a20b",
    "metadata": {},
    "outputs": [
     {
@@ -4520,7 +4520,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "edff1109",
+   "id": "b9dd851b",
    "metadata": {},
    "outputs": [
     {
@@ -4628,7 +4628,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "f189c8e0",
+   "id": "4a05ebfc",
    "metadata": {},
    "outputs": [
     {
@@ -4734,7 +4734,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "e50fc9a1",
+   "id": "c5abd363",
    "metadata": {},
    "outputs": [
     {
@@ -4848,7 +4848,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "dfef1586",
+   "id": "07dafc3b",
    "metadata": {},
    "outputs": [
     {
@@ -4956,7 +4956,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "1311da44",
+   "id": "a3b9a1ff",
    "metadata": {},
    "outputs": [
     {
@@ -5008,7 +5008,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "05d04efd",
+   "id": "6556f2aa",
    "metadata": {},
    "outputs": [
     {
@@ -5054,7 +5054,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "31635220",
+   "id": "f4c136cf",
    "metadata": {},
    "outputs": [
     {
@@ -5084,7 +5084,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "f96ea7c9",
+   "id": "b91cfd07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5100,7 +5100,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "88f955d2",
+   "id": "3ac971c1",
    "metadata": {},
    "outputs": [
     {
@@ -5444,7 +5444,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "92ba5b52",
+   "id": "84866b5e",
    "metadata": {},
    "outputs": [
     {
@@ -5490,7 +5490,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "fa6840ee",
+   "id": "22004ec5",
    "metadata": {},
    "outputs": [
     {
@@ -5613,7 +5613,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "2adb578b",
+   "id": "4f18602f",
    "metadata": {},
    "outputs": [
     {
@@ -5740,7 +5740,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "41bb2b1e",
+   "id": "3f845ea4",
    "metadata": {},
    "outputs": [
     {
@@ -5919,7 +5919,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "5e2ecc80",
+   "id": "01966ca8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5954,7 +5954,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "8994bd1d",
+   "id": "3be2cb26",
    "metadata": {},
    "outputs": [
     {
@@ -6057,7 +6057,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "c0ef65cd",
+   "id": "45c810a6",
    "metadata": {},
    "outputs": [
     {
@@ -6167,11 +6167,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "df103205",
+   "execution_count": 148,
+   "id": "8bedc811",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 4.13.1 Group By School Type\n",
+    "# Create series for:\n",
+    "    # Average Math Score\n",
+    "    # Average Reading Score\n",
+    "    # Average % Passing Math\n",
+    "    # Average % Passing Reading\n",
+    "    # Average % Overall Passing\n",
+    "# Since the School Type column is in the per_school_summary_df DataFrame, we won't need to create this column as we did for the school spending and school size DataFrames. \n",
+    "# All we need to do is use the groupby() function to group the data on the School Type.\n",
+    "\n",
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "69590a5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4.13.2 Create a DataFrame for the Scores by School Type\n",
+    "# create a new DataFrame called type_summary_df that includes average math and reading scores, the average percentage of students who passed math and reading, and the average overall percentage.\n",
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "271f0107",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Format Changes\n"
+   ]
   }
  ],
  "metadata": {
