--- a/PyCitySchools_Challenge_testing.ipynb.ipynb
+++ b/PyCitySchools_Challenge_testing.ipynb.ipynb
@@ -2,6 +2,695 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "420131b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies and Setup\n",
+    "import pandas as pd\n",
+    "\n",
+    "# File to Load (Remember to change the path if needed.)\n",
+    "school_data_to_load = \"Resources/schools_complete.csv\"\n",
+    "student_data_to_load = \"Resources/students_complete.csv\"\n",
+    "\n",
+    "# Read the School Data and Student Data and store into a Pandas DataFrame\n",
+    "school_data_df = pd.read_csv(school_data_to_load)\n",
+    "student_data_df = pd.read_csv(student_data_to_load)\n",
+    "\n",
+    "# Cleaning Student Names and Replacing Substrings in a Python String\n",
+    "# Add each prefix and suffix to remove to a list.\n",
+    "prefixes_suffixes = [\"Dr. \", \"Mr. \",\"Ms. \", \"Mrs. \", \"Miss \", \" MD\", \" DDS\", \" DVM\", \" PhD\"]\n",
+    "\n",
+    "# Iterate through the words in the \"prefixes_suffixes\" list and replace them with an empty space, \"\".\n",
+    "for word in prefixes_suffixes:\n",
+    "    student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")\n",
+    "\n",
+    "# Check names.\n",
+    "student_data_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b668421c",
+   "metadata": {},
+   "source": [
+    "# Deliverable 1: Replace the reading and math scores.\n",
+    "## Replace the 9th grade reading and math scores at Thomas High School with NaN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd880046",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install numpy using conda install numpy or pip install numpy. \n",
+    "# Step 1. Import numpy as np\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14761da0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2. Use the loc method on the student_data_df to select all the reading scores from the 9th grade at Thomas High School and replace them with NaN.\n",
+    "student_data_df.loc["
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef5bae6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Step 3. Refactor the code in Step 2 to replace the math scores with NaN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "578efd01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Step 4. Check the student data for NaN's. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ec8d0ec",
+   "metadata": {},
+   "source": [
+    "## Deliverable 2 : Repeat the school district analysis\n",
+    "\n",
+    "### District Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "571f56f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine the data into a single dataset\n",
+    "school_data_complete_df = pd.merge(student_data_df, school_data_df, how=\"left\", on=[\"school_name\", \"school_name\"])\n",
+    "school_data_complete_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a3183a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the Totals (Schools and Students)\n",
+    "school_count = len(school_data_complete_df[\"school_name\"].unique())\n",
+    "student_count = school_data_complete_df[\"Student ID\"].count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a088849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the Total Budget\n",
+    "total_budget = school_data_df[\"budget\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8e3b32b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the Average Scores using the \"clean_student_data\".\n",
+    "average_reading_score = school_data_complete_df[\"reading_score\"].mean()\n",
+    "average_math_score = school_data_complete_df[\"math_score\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "444df7da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1. Get the number of students that are in ninth grade at Thomas High School.\n",
+    "# These students have no grades. \n",
+    "\n",
+    "\n",
+    "# Get the total student count \n",
+    "student_count = school_data_complete_df[\"Student ID\"].count()\n",
+    "\n",
+    "\n",
+    "# Step 2. Subtract the number of students that are in ninth grade at \n",
+    "# Thomas High School from the total student count to get the new total student count."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4467ef8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the passing rates using the \"clean_student_data\".\n",
+    "passing_math_count = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)].count()[\"student_name\"]\n",
+    "passing_reading_count = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd11d7c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3. Calculate the passing percentages with the new total student count.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09a267d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the students who passed both reading and math.\n",
+    "passing_math_reading = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)\n",
+    "                                               & (school_data_complete_df[\"reading_score\"] >= 70)]\n",
+    "\n",
+    "# Calculate the number of students that passed both reading and math.\n",
+    "overall_passing_math_reading_count = passing_math_reading[\"student_name\"].count()\n",
+    "\n",
+    "\n",
+    "# Step 4.Calculate the overall passing percentage with new total student count.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4957b8e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a DataFrame\n",
+    "district_summary_df = pd.DataFrame(\n",
+    "          [{\"Total Schools\": school_count, \n",
+    "          \"Total Students\": student_count, \n",
+    "          \"Total Budget\": total_budget,\n",
+    "          \"Average Math Score\": average_math_score, \n",
+    "          \"Average Reading Score\": average_reading_score,\n",
+    "          \"% Passing Math\": passing_math_percentage,\n",
+    "         \"% Passing Reading\": passing_reading_percentage,\n",
+    "        \"% Overall Passing\": overall_passing_percentage}])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Format the \"Total Students\" to have the comma for a thousands separator.\n",
+    "district_summary_df[\"Total Students\"] = district_summary_df[\"Total Students\"].map(\"{:,}\".format)\n",
+    "# Format the \"Total Budget\" to have the comma for a thousands separator, a decimal separator and a \"$\".\n",
+    "district_summary_df[\"Total Budget\"] = district_summary_df[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "# Format the columns.\n",
+    "district_summary_df[\"Average Math Score\"] = district_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "district_summary_df[\"Average Reading Score\"] = district_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "district_summary_df[\"% Passing Math\"] = district_summary_df[\"% Passing Math\"].map(\"{:.1f}\".format)\n",
+    "district_summary_df[\"% Passing Reading\"] = district_summary_df[\"% Passing Reading\"].map(\"{:.1f}\".format)\n",
+    "district_summary_df[\"% Overall Passing\"] = district_summary_df[\"% Overall Passing\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "# Display the data frame\n",
+    "district_summary_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dd09db2",
+   "metadata": {},
+   "source": [
+    "##  School Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2adc6045",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Determine the School Type\n",
+    "per_school_types = school_data_df.set_index([\"school_name\"])[\"type\"]\n",
+    "\n",
+    "# Calculate the total student count.\n",
+    "per_school_counts = school_data_complete_df[\"school_name\"].value_counts()\n",
+    "\n",
+    "# Calculate the total school budget and per capita spending\n",
+    "per_school_budget = school_data_complete_df.groupby([\"school_name\"]).mean()[\"budget\"]\n",
+    "# Calculate the per capita spending.\n",
+    "per_school_capita = per_school_budget / per_school_counts\n",
+    "\n",
+    "# Calculate the average test scores.\n",
+    "per_school_math = school_data_complete_df.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "per_school_reading = school_data_complete_df.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "\n",
+    "# Calculate the passing scores by creating a filtered DataFrame.\n",
+    "per_school_passing_math = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)]\n",
+    "per_school_passing_reading = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)]\n",
+    "\n",
+    "# Calculate the number of students passing math and passing reading by school.\n",
+    "per_school_passing_math = per_school_passing_math.groupby([\"school_name\"]).count()[\"student_name\"]\n",
+    "per_school_passing_reading = per_school_passing_reading.groupby([\"school_name\"]).count()[\"student_name\"]\n",
+    "\n",
+    "# Calculate the percentage of passing math and reading scores per school.\n",
+    "per_school_passing_math = per_school_passing_math / per_school_counts * 100\n",
+    "per_school_passing_reading = per_school_passing_reading / per_school_counts * 100\n",
+    "\n",
+    "# Calculate the students who passed both reading and math.\n",
+    "per_passing_math_reading = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)\n",
+    "                                               & (school_data_complete_df[\"math_score\"] >= 70)]\n",
+    "\n",
+    "# Calculate the number of students passing math and passing reading by school.\n",
+    "per_passing_math_reading = per_passing_math_reading.groupby([\"school_name\"]).count()[\"student_name\"]\n",
+    "\n",
+    "# Calculate the percentage of passing math and reading scores per school.\n",
+    "per_overall_passing_percentage = per_passing_math_reading / per_school_counts * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dbe2b41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the DataFrame\n",
+    "per_school_summary_df = pd.DataFrame({\n",
+    "    \"School Type\": per_school_types,\n",
+    "    \"Total Students\": per_school_counts,\n",
+    "    \"Total School Budget\": per_school_budget,\n",
+    "    \"Per Student Budget\": per_school_capita,\n",
+    "    \"Average Math Score\": per_school_math,\n",
+    "    \"Average Reading Score\": per_school_reading,\n",
+    "    \"% Passing Math\": per_school_passing_math,\n",
+    "    \"% Passing Reading\": per_school_passing_reading,\n",
+    "    \"% Overall Passing\": per_overall_passing_percentage})\n",
+    "\n",
+    "\n",
+    "# per_school_summary_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14f93ec8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Format the Total School Budget and the Per Student Budget\n",
+    "per_school_summary_df[\"Total School Budget\"] = per_school_summary_df[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
+    "per_school_summary_df[\"Per Student Budget\"] = per_school_summary_df[\"Per Student Budget\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "# Display the data frame\n",
+    "per_school_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78f5701f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 5.  Get the number of 10th-12th graders from Thomas High School (THS)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa6eccf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 6. Get all the students passing math from THS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d6e9ace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 7. Get all the students passing reading from THS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abd4c446",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 8. Get all the students passing math and reading from THS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68552c5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 9. Calculate the percentage of 10th-12th grade students passing math from Thomas High School. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "343d24f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 10. Calculate the percentage of 10th-12th grade students passing reading from Thomas High School."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b930b2d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 11. Calculate the overall passing percentage of 10th-12th grade from Thomas High School. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a02c18bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 12. Replace the passing math percent for Thomas High School in the per_school_summary_df."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f751195f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 13. Replace the passing reading percentage for Thomas High School in the per_school_summary_df.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14fbd491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 14. Replace the overall passing percentage for Thomas High School in the per_school_summary_df."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "075aa116",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# per_school_summary_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3254bf74",
+   "metadata": {},
+   "source": [
+    "## High and Low Performing Schools "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0de247e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort and show top five schools."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85e257b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort and show top five schools."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8178b47",
+   "metadata": {},
+   "source": [
+    "## Math and Reading Scores by Grade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a551a4c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a Series of scores by grade levels using conditionals.\n",
+    "\n",
+    "\n",
+    "# Group each school Series by the school name for the average math score.\n",
+    "\n",
+    "\n",
+    "# Group each school Series by the school name for the average reading score.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e010f53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine each Series for average math scores by school into single data frame.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ce7aed9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine each Series for average reading scores by school into single data frame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eed2970c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Format each grade column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc6e137b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the index.\n",
+    "\n",
+    "\n",
+    "# Display the data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4f8bebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Remove the index.\n",
+    "\n",
+    "\n",
+    "# Display the data frame\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "880cf8ee",
+   "metadata": {},
+   "source": [
+    "## Scores by School Spending"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f359c99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establish the spending bins and group names.\n",
+    "\n",
+    "\n",
+    "# Categorize spending based on the bins.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2110372a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4b781c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6128c3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Format the DataFrame "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5fc25a1",
+   "metadata": {},
+   "source": [
+    "## Scores by School Size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1fc3392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establish the bins.\n",
+    "\n",
+    "# Categorize spending based on the bins."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a8faa8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa6df51f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assemble into DataFrame. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2326802",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Format the DataFrame  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d839d901",
+   "metadata": {},
+   "source": [
+    "## Scores by School Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e17ba0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "237b96dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assemble into DataFrame. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dc4986d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Format the DataFrame "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df9f3e3c",
+   "metadata": {},
+   "source": [
+    "# END OF CHALLENGE STARTER CODE"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "eb3cc1f0",
    "metadata": {},
